# radio-terror

./: .gitignore  LICENSE  README.md
app/danger_gadget/: CMakeLists.txt  sdkconfig
app/danger_gadget/main/: CMakeLists.txt  Kconfig.projbuild  danger_gadget_system.cc  danger_gadget_system.h  gpio_input_watch_task.h  gptimer.h  i2c_util.cc  i2c_util.h  idf_component.yml  logger.h  main.cc  mcp23017.h  message_queue.h  task.cc  task.h  wifi_util.cc  wifi_util.h  ws_client.cc  ws_client.h
pcb/danger_gadget/: danger_gadget.kicad_pro  danger_gadget.kicad_sch
pcb/danger_godget/: danger_godget.kicad_sch
pcb/transceiver_connector/: transceiver_connector.kicad_pro  transceiver_connector.kicad_sch
